If applied, this commit will add jitter.